WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239445
[WebGPU] RGB9E5Ufloat textures are not renderable
https://bugs.webkit.org/show_bug.cgi?id=239445
Summary
[WebGPU] RGB9E5Ufloat textures are not renderable
Myles C. Maxfield
Reported
2022-04-17 18:04:55 PDT
.
Attachments
Patch
(1.86 KB, patch)
2022-04-17 18:06 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-04-17 18:06:44 PDT
Created
attachment 457788
[details]
Patch
EWS
Comment 2
2022-04-20 08:33:16 PDT
Committed
r293095
(
249806@main
): <
https://commits.webkit.org/249806@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457788
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-20 08:34:16 PDT
<
rdar://problem/92028838
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug