[WebGPU] RGB9E5Ufloat textures are not renderable https://bugs.webkit.org/show_bug.cgi?id=239445

Reviewed by Kimmo Kinnunen.

I misread the table in the spec. This format isn't listed in
https://gpuweb.github.io/gpuweb/#plain-color-formats but is instead
listed in https://gpuweb.github.io/gpuweb/#packed-formats.

* WebGPU/Texture.mm:
(WebGPU::isRenderableFormat):

Canonical link: https://commits.webkit.org/249806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293095 268f45cc-cd09-0410-ab3c-d52691b4dbfc